@@ -1,3 +1,6 @@
+2007-02-02 David Moore http://davemoore.org/
+	* SVN 371: Fix typo in trigger mode detection.
+
 2007-02-01 Damien Douxchamps http://damien.douxchamps.net/
 	* SVN 370: Allow to change the pinstate of AVT IO pins.
 	           Thanks to Chris French.
